Add JSON array parsing for geo_point string casts